<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.elvers.gereon.stgnewsapp1.CommentsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent"
        android:background="@android:color/background_light">
    <ListView
        android:id="@+id/comment_listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:orientation="vertical"/>
    <ProgressBar
        android:id="@+id/comments_loading_circle"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/comments_empty_view_rl">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                tools:src="@drawable/ic_quill"
                android:id="@+id/comments_empty_view_quill_iv"
                android:layout_above="@id/comments_empty_view_tv"
                android:contentDescription="@string/quill_description" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:id="@+id/comments_empty_view_tv"
                tools:text="@string/comments_empty_view"
                android:textSize="16sp"
                android:gravity="center_horizontal"
                android:textColor="@android:color/primary_text_light"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/comments_empty_view_tv"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true">
                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"/>
            <ImageView
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:paddingTop="16dp"
                android:paddingRight="72dp"
                android:paddingEnd="72dp"
                android:paddingBottom="24dp"
                android:scaleType="fitXY"
                tools:src="@drawable/ic_arrow"
                android:id="@+id/comments_empty_view_arrow_iv"
                tools:ignore="RtlSymmetry"
                android:contentDescription="@string/arrow_description" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

</FrameLayout>
